Show distribution logos, and launch WSL shells in a detached process.

--- a/wslman.qrc
+++ b/wslman.qrc
@@ -2,5 +2,8 @@
 <RCC version="1.0">
     <qresource>
         <file>icons/terminal.png</file>
+        <file>icons/dist-alpine.png</file>
+        <file>icons/dist-debian.png</file>
+        <file>icons/dist-ubuntu.png</file>
     </qresource>
 </RCC>
