--- a/wslman.qrc
+++ b/wslman.qrc
@@ -2,9 +2,12 @@
 <RCC version="1.0">
     <qresource>
         <file>icons/terminal.ico</file>
+        <file>icons/view-refresh.png</file>
+
         <file>icons/list-add.png</file>
         <file>icons/document-edit.png</file>
         <file>icons/edit-delete.png</file>
+
         <file>icons/dist-alpine.png</file>
         <file>icons/dist-arch.png</file>
         <file>icons/dist-debian.png</file>
