--- a/wslman.qrc
+++ b/wslman.qrc
@@ -2,7 +2,7 @@
 <RCC version="1.0">
     <qresource>
         <file>icons/terminal.ico</file>
-        <file>icons/view-refresh.png</file>
+        <file>icons/view-refresh.ico</file>
 
         <file>icons/list-add.png</file>
         <file>icons/document-edit.png</file>
